background vedio in exercise-2

--- a/exercise's/exercise-1.html
+++ b/exercise's/exercise-1.html
@@ -116,8 +116,8 @@
 
       <div id="media ">
         <video
-          class="vedio"
-          src="videos/vedio-4.mp4"
+          class="video"
+          src="videos/video-4.mp4"
           height="200"
           autoplay
           loop
