--- a/exercise's/exercise-2.html
+++ b/exercise's/exercise-2.html
@@ -29,7 +29,6 @@
       img {
         display: block;
       }
-
       #hero {
         height: 100vh;
 
@@ -81,7 +80,6 @@
       nav ul a:hover {
         color: rgb(182, 181, 181);
         text-shadow: 0 0 10px white;
-        font-size: 1.2rem;
       }
 
       h1 {
@@ -105,6 +103,14 @@
         object-fit: cover;
         z-index: -2;
       }
+      .faisal {
+        font-size: 1.5rem;
+        opacity: 0.6;
+        transition: all 0.3s;
+      }
+      .faisal:hover {
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
@@ -116,7 +122,7 @@
         </video>
 
         <header>
-          <a href="/"><img src="images/logo-l3.svg" alt="Logo" /></a>
+          <p class="faisal">🅵🅰🅸🆂🅰🅻</p>
 
           <nav>
             <ul>
